# an-augment

./: .gitignore  README.md  automate_test.py  pyproject.toml  requirements.txt  setup.py
.circleci/: config.yml
.github/workflows/: generator-generic-ossf-slsa3-publish.yml  greetings.yml  pylint.yml  python-package-check.yml  python-package.yml  python-publish.yml  ruff.yml  slsa-publish.yml  stale.yml
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SETUP_GUIDE.md
examples/: example_bilateral_blur.py  example_usage.ipynb  example_usage.py
examples/blur/: example_adaptive_blur.py  example_bilateral_blur.py
medical/: flip.py
src/: medical_augmentation.py
src/an_augment/: __init__.py
src/an_augment/default/: __init__.py  blur.py  crop.py  flip.py  noise.py  rotate.py
src/an_augment/medical/: medical_augmentation.py
src/anaug/: __init__.py
src/anaug/default/: __init__.py  blur.py  elastic_deformation.py  intensity.py  noise.py
src/anaug/medical/: __init__.py  random_lesion.py
src/anaug/style_transform/: __init__.py  neural_style.py  vgg16.py
src/augmentations/: add_noise.py  intensity_scaling.py  occlusion.py  random_crop_and_scale.py
src/med_augment/: medical_augmentation.py
src/med_augment/augmentations/: elastic_deformation.py  gaussian_blur.py
src/medical/: medical_augmentation.py
tests/: test_add_noise.py  test_elastic_deformation.py  test_flip.py  test_gaussian_blur.py  test_intensity_scaling.py  test_medical_augmentation.py  test_occlusion.py  test_random_crop_and_scale.py  test_random_rotation.py
tests/default/: test_blur.py  test_crop.py  test_elastic_deformation.py  test_flip.py  test_intensity.py  test_noise.py  test_occlusion.py  test_random_crop.py  test_random_rotation.py  test_rotate.py  test_scale.py
tests/medical/: test_random_lesion.py
tests/style_transform/: test_neural_style.py  test_vgg16.py
